@@ -1,8 +1,14 @@
 package org.jenkinsci.plugins.liquibase.common;
 
+import com.google.common.base.Splitter;
+import com.google.common.collect.Iterables;
 import hudson.FilePath;
 import liquibase.changelog.ChangeSet;
 import liquibase.changelog.DatabaseChangeLog;
+import liquibase.util.StringUtils;
+import org.jenkinsci.plugins.liquibase.exception.LiquibaseRuntimeException;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 import java.io.File;
 import java.io.IOException;
@@ -10,23 +16,13 @@ import java.net.MalformedURLException;
 import java.net.URI;
 import java.net.URL;
 import java.net.URLClassLoader;
+import java.nio.file.Path;
 import java.nio.file.Paths;
-import java.security.AccessController;
-import java.security.PrivilegedAction;
 import java.sql.Driver;
 import java.sql.DriverManager;
 import java.sql.SQLException;
-
-import javax.annotation.Nullable;
-
-import org.jenkinsci.plugins.liquibase.exception.LiquibaseRuntimeException;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
-
-import com.google.common.base.Function;
-import com.google.common.base.Splitter;
-import com.google.common.base.Strings;
-import com.google.common.collect.Iterables;
+import java.util.ArrayList;
+import java.util.List;
 
 public class Util {
     private static final Logger LOG = LoggerFactory.getLogger(Util.class);
@@ -47,62 +43,57 @@ public class Util {
         return filePath + "::" + changeSetName.replace(filePath + "::", "");
     }
 
-    public static void registerDatabaseDriver(String driverName, String classpath)
-            throws InstantiationException, IllegalAccessException, ClassNotFoundException, SQLException {
+    public static void registerDatabaseDriver(String driverName, ClassLoader liquibaseClassLoader) throws SQLException {
         Driver driver;
-        if (!Strings.isNullOrEmpty(classpath)) {
-            Driver actualDriver =
-                    (Driver) Class.forName(driverName, true, Thread.currentThread().getContextClassLoader())
-                                  .newInstance();
+        try {
+            Driver actualDriver = (Driver) Class.forName(driverName, true, liquibaseClassLoader).getDeclaredConstructor().newInstance();
             driver = new DriverShim(actualDriver);
-        } else {
-            driver = (Driver) Class.forName(driverName).newInstance();
-        }
 
-        DriverManager.registerDriver(driver);
+            DriverManager.registerDriver(driver);
+        } catch (ReflectiveOperationException e) {
+            throw new SQLException("Cannot create driver " + driverName + ": " + e.getMessage(), e);
+        }
     }
 
-    public static void addClassloader(boolean isUnix, final FilePath workspace, String classpath) {
+    public static ClassLoader createClassLoader(boolean isUnix, final FilePath workspace, String classpath) {
         String separator;
         if (isUnix) {
             separator = ":";
         } else {
             separator = ";";
         }
+
+        List<URL> classpathUrls = new ArrayList<>();
         Iterable<String> classPathElements = Splitter.on(separator).trimResults().split(classpath);
-        final Iterable<URL> urlIterable = Iterables.transform(classPathElements, new Function<String, URL>() {
-            @Override
-            public URL apply(@Nullable String filePath) {
-                URL url = null;
-                if (filePath != null) {
-                    try {
-                        if (Paths.get(filePath).isAbsolute()) {
-                            url = new File(filePath).toURI().toURL();
-                        } else {
-                            URI workspaceUri = workspace.toURI();
-                            File workspace = new File(workspaceUri);
-                            url = new File(workspace, filePath).toURI().toURL();
-                        }
-                    } catch (MalformedURLException e) {
-                        LOG.warn("Unable to transform classpath element " + filePath, e);
-                    } catch (InterruptedException e) {
-                        throw new LiquibaseRuntimeException("Error during database driver resolution", e);
-                    } catch (IOException e) {
-                        throw new LiquibaseRuntimeException("Error during database driver resolution", e);
+
+        for (String filePath : classPathElements) {
+            filePath = StringUtils.trimToNull(filePath);
+            if (filePath == null) {
+                continue;
+            }
+
+            //jenkins FilePath prefers unix style, even on windows
+            filePath = filePath.replace("\\", "/");
+
+            FilePath file;
+            if (workspace == null) {
+                file = new FilePath(new File(filePath));
+            } else {
+                file = workspace.child(filePath);
+            }
+            try {
+
+                if (file.isDirectory()) {
+                    for (FilePath jarFile : file.list("*.jar")) {
+                        classpathUrls.add(jarFile.toURI().toURL());
                     }
                 }
-                return url;
+                classpathUrls.add(file.toURI().toURL());
+            } catch (Exception e) {
+                LOG.warn("Error handling classpath " + file+": "+e.getMessage(), e);
             }
-        });
+        }
 
-        URLClassLoader urlClassLoader = AccessController.doPrivileged(new PrivilegedAction<URLClassLoader>() {
-            @Override
-            public URLClassLoader run() {
-                return new URLClassLoader(Iterables.toArray(urlIterable, URL.class),
-                        Thread.currentThread().getContextClassLoader());
-            }
-        });
-        Thread.currentThread().setContextClassLoader(urlClassLoader);
-
+        return new URLClassLoader(Iterables.toArray(classpathUrls, URL.class), Util.class.getClassLoader());
     }
 }
